@@ -37,6 +37,7 @@
   *  - Library Applications:
   *   - Fixed incorrect signature in the CDC and DFU class bootloaders for the ATMEGA8U2
   *   - Fixed KeyboardHost and KeyboardHostWithParser demos displaying incorrect values when numerical keys were pressed
+  *   - Fixed compile errors in the incomplete BluetoothHost demo application (thanks to Timo Lindfors)
   *
   *  \section Sec_ChangeLog110528 Version 110528
   *  <b>New:</b>
